--- a/CV 2/Resume.html
+++ b/CV 2/Resume.html
@@ -13,6 +13,7 @@
 		<nav>
 			<a href="https://www.instagram.com/fafiprileen_/">Instagram</a>
 			<a href="https://www.linkedin.com/in/tiffanygoentjoro/">Linkedin</a>
+			<a href="https://www.youtube.com/channel/UCCHThoaQz8CSQwYXBD1d6XA">Youtube</a>
 		</nav>
 	</div>
 		<div class="leftcolumn">
