--- a/CV 2/Resume.html
+++ b/CV 2/Resume.html
@@ -22,6 +22,7 @@
 				<img src="css/profile.jpg" alt="profile" title="profile">
 				<br>
 				<p>My qualifications include being enthusiastic, self-driven, reliable, hard-working, honest and punctual, as well as working well in teams. I have good listening and communication skills, as well as a creative mind and am always eager for new challenges.</p>
+				<p>Born in Jakarta, Indonesia 1994. Music, Art, and Sport are my favorite things to do.</p>
 			</div>
 			<div class="card">
 				<h2>Contact</h2>
